[project]
name = "sentiflow"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi==0.136.1",
    "loguru>=0.7.3",
    "markitdown>=0.1.3",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.20",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "uvicorn==0.46.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple/"
default = true
